--- a/index/assets/main.css
+++ b/index/assets/main.css
@@ -2,38 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-.om {
-  font-family: OpemMoji;
-}
-
-.om-black {
-  font-family: OpemMoji;
-  font-style: oblique;
-}
-
 body {
   background-color: #f3f4f6;
-  overflow: hidden;
-  font-family: Noto Sans Display;
-  font-weight: 400;
-  width: 100vw;
-  height: 100vh;
-}
-
-body.dark {
-  background-color: #111827;
-}
-
-#__nuxt,
-#__layout {
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
   font-family: Noto Sans;
+  font-weight: 400;
+}
+
+*[tabindex='1'],
+*[tabindex='5'] {
+  outline: none;
+}
+
+@media (min-width: 768px) {
+  *[tabindex='1'],
+  *[tabindex='5'] {
+    outline: initial;
+  }
 }
